fixed even spacing outside of flexbox for images

--- a/index.css
+++ b/index.css
@@ -6,9 +6,13 @@ h1 {
   text-align: center;
 }
 
+#images {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
 #images > * {
-  display:flexbox;
-  justify-content: space-between;
   height: auto;
   max-width: 100%;
 }
